<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondoghost"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height= "3dp"
        android:background="@color/Aqua"/>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
	<TableLayout
                android:id="@+id/tablaimagenes2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:orientation="vertical"
                android:layout_gravity="center_vertical" >
         
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:text="@string/efecto"
                android:textColor="@color/GhostWhite"
                android:textSize="20sp" />
          
            
			
			<ImageButton
        		android:id="@+id/imagenefecto"
        		android:layout_width="fill_parent"
        		android:layout_height="120dp"
        		android:scaleType="fitCenter"
        		android:background="@null"
        		android:contentDescription="1340"
        		android:onClick="mostrarEfectos1"     		
        		android:src="@drawable/f1340p" />
			
			
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/position"
                android:textColor="@color/GhostWhite"
                android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height= "10dp"
            android:background="@null"/>

            

            <TableRow>

                    <ImageButton
                        android:id="@+id/imagenizda"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:onClick="imagenIzda"
                        android:scaleType="centerInside"
                        android:src="@drawable/f1000iu" />

                    <ImageButton
                        android:id="@+id/imagencentro"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:onClick="imagenCentro"
                        android:scaleType="centerInside"
                        android:src="@drawable/f1000cd" />

                    <ImageButton
                        android:id="@+id/imagendcha"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:onClick="imagenDcha"
                        android:scaleType="centerInside"
                        android:src="@drawable/f1000dd" />
          </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height= "15dp"
            android:background="@null"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/camaraogaleria"
                    android:textColor="@color/GhostWhite"
                    android:textSize="20sp"/>

                <TableRow>

                    <Button
                        android:id="@+id/imagenCamara"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/camera"
                        android:scaleType="centerInside"
                        android:text="@string/camera"
                        android:textColor="@color/GhostWhite"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/imagenGaleria"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/botonphotosmin"
                        android:scaleType="centerInside"
                        android:text="@string/gallery"
                        android:textColor="@color/GhostWhite"
                        android:visibility="visible" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
   </ScrollView>

</LinearLayout>